# Paralelogrep

./: CMakeLists.txt  readme.md
src/: main.cpp  pgrep.cpp  pgrep.hpp
